--- a/app/views/main.html
+++ b/app/views/main.html
@@ -5,7 +5,7 @@
   <form role="form" ng-submit="addTodo()">
     <div class="row">
       <div class="input-group">
-        <input type="text" ng-model="todo" placeholder="What needs to be done?" class="form-control">
+        <input type="text" ng-model="main.todo" placeholder="What needs to be done?" class="form-control">
         <span class="input-group-btn">
           <input type="submit" class="btn btn-primary" value="Add">
         </span>
@@ -15,10 +15,11 @@
 
   <!-- Todos list -->
   <div ui-sortable ng-model="todos">
-    <p class="input-group" ng-repeat="todo in todos track by $index" style="padding:5px 10px; cursor: move;">
+    <p class="input-group" ng-repeat="todo in main.todos track by $index" style="padding:5px 10px; cursor: move;">
       <input type="text" ng-model="todo" class="form-control">
+
       <span class="input-group-btn">
-        <button class="btn btn-danger" ng-click="removeTodo($index)" aria-label="Remove">X</button>
+        <button class="btn btn-danger" ng-click="main.removeTodo($index)" aria-label="Remove">X</button>
       </span>
     </p>
   </div>
